k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chess-frontend
spec:
  selector:
    matchLabels:
      app: chess-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: chess-frontend
    spec:
      imagePullSecrets:
        - name: simplicitas-dev-docker-creds
      containers:
        - name: chess-frontend
          image: simplicitasdev/chess-frontend-staging:build-$BUILD_NUMBER-$GIT_COMMIT
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chess-backend
spec:
  selector:
    matchLabels:
      app: chess-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: chess-backend
    spec:
      imagePullSecrets:
        - name: simplicitas-dev-docker-creds
      containers:
        - name: chess-backend
          image: simplicitasdev/chess-backend-staging:build-$BUILD_NUMBER-$GIT_COMMIT
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: chess-frontend-service
spec:
  selector:
    app: chess-frontend
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: chess-backend-service
spec:
  selector:
    app: chess-backend
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chess-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-staging'
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
spec:
  rules:
    - host: 'chess.knox.pro'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chess-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: chess-backend-service
                port:
                  number: 80
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: chess-backend-service
                port:
                  number: 80
  tls:
    - hosts:
        - 'chess.knox.pro'
      secretName: chess-tls
